--- a/progettoiseo/accounts/templates/profilo.html
+++ b/progettoiseo/accounts/templates/profilo.html
@@ -129,11 +129,33 @@
                                 <i class="fas fa-save"></i> Salva Modifiche
                             </button>
                             <a href="{% url 'home' %}" class="btn btn-secondary">
-                                <i class="fas fa-times"></i> Annulla
+                                <i class="fas fa-arrow-left"></i> Torna alla Home
                             </a>
                         </div>
                     </div>
                 </form>
+            </div>
+        </div>
+        <!-- Eventi a cui sono iscritto -->
+        <div class="card mt-4">
+            <div class="card-header">
+                <h4 class="mb-0">Eventi a cui sei iscritto</h4>
+            </div>
+            <div class="card-body">
+                {% if profilo_utente.eventi_iscritti.all %}
+                    <ul class="list-group">
+                        {% for evento in profilo_utente.eventi_iscritti.all %}
+                            <li class="list-group-item d-flex justify-content-between align-items-center">
+                                <a href="{% url 'evento-detail' evento.pk %}">{{ evento.titolo }}</a>
+                                <span class="badge bg-primary">{{ evento.inizio_evento|date:'d/m/Y H:i' }}</span>
+                            </li>
+                        {% empty %}
+                            <li class="list-group-item">Non sei iscritto ad alcun evento.</li>
+                        {% endfor %}
+                    </ul>
+                {% else %}
+                    <div class="alert alert-info mb-0">Non sei iscritto ad alcun evento.</div>
+                {% endif %}
             </div>
         </div>
     </div>
