Risolto form eventi e modificata leggermente navbar

--- a/progettoiseo/pagine_statiche/templates/layouts/components/navbar.html
+++ b/progettoiseo/pagine_statiche/templates/layouts/components/navbar.html
@@ -9,7 +9,7 @@
             {% if user.is_authenticated %}
             <div class="d-flex align-items-center me-3">
                 <span class="navbar-text text-light me-3 d-none d-lg-inline">
-                    <i class="fas fa-user-circle me-1"></i>Ciao, {{ user.first_name|default:user.username }}!
+                    Ciao, {{ user.first_name|default:user.username }}!
                 </span>
                 <div class="nav-item dropdown">
                     <a
