--- a/progettoiseo/pagine_statiche/templates/home.html
+++ b/progettoiseo/pagine_statiche/templates/home.html
@@ -36,9 +36,11 @@
                                 <i class="bi bi-calendar3 me-1"></i>
                                 <span class="me-3">{{ articolo.data_pubblicazione|date:"d F Y" }}</span>
                                 {% if articolo.tag %}
-                                <div class="tags">
-                                    {% for tag in articolo.tag|split:"," %}
-                                        <span class="badge bg-secondary me-1">{{ tag|trim|clean_hashtags }}</span>
+                                <div class="mb-2">
+                                    {% for tag in articolo.get_tags_list %}
+                                        {% if tag %}
+                                            <span class="badge bg-secondary me-1">#{{ tag|cut:","}}</span>
+                                        {% endif %}
                                     {% endfor %}
                                 </div>
                                 {% endif %}
